--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orgedbb58b">
-<h2 id="orgedbb58b">Navigation instructions</h2>
+<section id="slide-orgc5a4dba">
+<h2 id="orgc5a4dba">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -75,8 +75,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-orga5e6211" data-audio-src="python/title.ogg">
-<h2 id="orga5e6211">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgb45fee4" data-audio-src="python/title.ogg">
+<h2 id="orgb45fee4">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -101,8 +101,8 @@ simple chemical engineering problems.
 </section>
 </section>
 <section>
-<section id="slide-orgf2d8ce6" data-audio-src="python/">
-<h2 id="orgf2d8ce6">Overview</h2>
+<section id="slide-orgbf3611a" data-audio-src="python/">
+<h2 id="orgbf3611a">Overview</h2>
 <ul class="fragment data-audio-src hello">
 <li>Jupyter notebooks</li>
 <li>Basic elements of the language</li>
@@ -186,16 +186,10 @@ to as far you want to go.
 
 
 </section>
-<section id="slide-org3c34091" data-audio-src="python/title.mp3">
-<h3 id="org3c34091">Python</h3>
-<p class="fragment" data-audio-text="This is a test.">
-</p>
-
-
-
 </section>
-<section id="slide-org9dac84e">
-<h3 id="org9dac84e">Jupyter notebooks</h3>
+<section>
+<section id="slide-orge11d27f">
+<h2 id="orge11d27f">Jupyter notebooks</h2>
 <ul>
 <li>Binder</li>
 <li>Google Colab</li>
@@ -231,8 +225,8 @@ mybinder.org, and the second method is with Google Colab.
 </aside>
 
 </section>
-<section id="slide-org4e1ddc4">
-<h3 id="org4e1ddc4">binder</h3>
+<section id="slide-orgb43fb75">
+<h3 id="orgb43fb75">binder</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29814&amp;code=d3~fUfZO0i6BIXbLrG8LPTO8TxihQo0" frameborder="0" allowfullscreen></iframe>
 
 
@@ -241,8 +235,8 @@ To follow along, open the Jupyter notebook: <a href="https://mybinder.org/v2/gh/
 </p>
 
 </section>
-<section id="slide-orgc93e673">
-<h3 id="orgc93e673">Google Colab</h3>
+<section id="slide-orge49d117">
+<h3 id="orge49d117">Google Colab</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29815&amp;code=dd~rQcuNtpfbWJpjOH07dDfsrn3beyJ" frameborder="0" allowfullscreen></iframe>
 
 
@@ -253,13 +247,13 @@ To follow along, open the Jupyter notebook: <a href="https://colab.research.goog
 </section>
 </section>
 <section>
-<section id="slide-org313e7c9">
-<h2 id="org313e7c9">Basics</h2>
-<div class="outline-text-2" id="text-org313e7c9">
+<section id="slide-orgf346b2f">
+<h2 id="orgf346b2f">Basics</h2>
+<div class="outline-text-2" id="text-orgf346b2f">
 </div>
 </section>
-<section id="slide-org3bc5f28">
-<h3 id="org3bc5f28">Python as a calculator</h3>
+<section id="slide-orgd0877e2">
+<h3 id="orgd0877e2">Python as a calculator</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29103&amp;code=cT~vMz6ypmaysddJKeMFJCSsrvT7UEV" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -274,8 +268,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-org8994f66">
-<h3 id="org8994f66">Example using variables</h3>
+<section id="slide-orgf12efb1">
+<h3 id="orgf12efb1">Example using variables</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -290,13 +284,13 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-org746c4eb">
-<h3 id="org746c4eb">Variables: Numbers and strings</h3>
+<section id="slide-org5ad0e25">
+<h3 id="org5ad0e25">Variables: Numbers and strings</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29216&amp;code=d5~ijLchTEOwGJMFWGf7RFQxZ9ZBPq8" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org073203f">
-<h3 id="org073203f">Variables: Lists</h3>
+<section id="slide-org5275e09">
+<h3 id="org5275e09">Variables: Lists</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29236&amp;code=cL~mfgCUbBNSZdDeCdWGhFAybiLyywg" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -304,15 +298,15 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-orgc24ac77">
-<h3 id="orgc24ac77">Variables: Dictionaries</h3>
+<section id="slide-orgece617a">
+<h3 id="orgece617a">Variables: Dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29339&amp;code=de~TDs6xrAtA4CCHNgzdMWVeqbpLI9b" frameborder="0" allowfullscreen></iframe>
 
 
 
 </section>
-<section id="slide-org633aecd">
-<h3 id="org633aecd">Example using dictionaries</h3>
+<section id="slide-orgd2fd8f4">
+<h3 id="orgd2fd8f4">Example using dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29221&amp;code=ct~RXSPpeK9MhrYbicpud7Bk9fTexcM" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -320,13 +314,13 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-orgb18dfe7">
-<h3 id="orgb18dfe7">More advanced use of dictionaries</h3>
+<section id="slide-org4402b94">
+<h3 id="org4402b94">More advanced use of dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29219&amp;code=de~TDs6xoAsA0CIHNgAdMWXejboLO9b" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org184bc1e">
-<h3 id="org184bc1e">Functions</h3>
+<section id="slide-org0edb566">
+<h3 id="org0edb566">Functions</h3>
 
 
 <p>
@@ -334,8 +328,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-orge57e73e">
-<h3 id="orge57e73e">Conditionals</h3>
+<section id="slide-orgd0aeda6">
+<h3 id="orgd0aeda6">Conditionals</h3>
 
 
 <p>
@@ -345,8 +339,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-org0d6c823">
-<h2 id="org0d6c823">Importing libraries</h2>
+<section id="slide-orgceb2f07">
+<h2 id="orgceb2f07">Importing libraries</h2>
 <ul>
 <li>Matplotlib</li>
 <li>Numpy</li>
@@ -357,7 +351,7 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 <p>
-Please see the Jupyter notebook <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_imports.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_imports.ipynb">colab</a>
+Please see the Jupyter notebook <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_numpy.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_numpy.ipynb">colab</a>
 for more details.
 </p>
 
@@ -389,49 +383,24 @@ module, and that you will find extremely useful, include:
 </aside>
 
 </section>
-<section id="slide-orgfd52ba0">
-<h3 id="orgfd52ba0">numpy</h3>
-<ul>
-<li>mathematical functions
-<ul>
-<li>trigonometric</li>
-<li>exponential and logarithmic</li>
-
-</ul></li>
-<li>random number generators</li>
-<li>constants (e.g., \(\pi\), \(e\))</li>
-<li>matrix and vector calculations</li>
-
-</ul>
-
-<aside class="notes">
-<p>
-
-</p>
-
-<p>
-Previously, we mentioned that Python can be used as a substitute for a
-calculator.  With what has been covered so far, this is not entirely
-true.  Modern calculators can evaluate special functions, such as
-logarithms, exponentials, trigonometric functions (e.g., sine, cosine,
-and tangent), as well as many others.  These functions are missing
-from Python.  For example, if you want to take the sine of a 
-</p>
-
-</aside>
-
-</section>
-<section id="slide-orgfb7d923">
-<h3 id="orgfb7d923">importing numpy</h3>
+<section id="slide-orga98a53c">
+<h3 id="orga98a53c">importing numpy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
+<span style="color: #00ffff;">print</span>(numpy.sin(2.0))
 
 <span style="color: #00ffff;">import</span> numpy <span style="color: #00ffff;">as</span> np
-
-<span style="color: #00ffff;">from</span> numpy <span style="color: #00ffff;">import</span> *
+np.sin(2.0)
 
 <span style="color: #00ffff;">from</span> numpy <span style="color: #00ffff;">import</span> pi
+<span style="color: #00ffff;">print</span>(pi)
+
+<span style="color: #00ffff;">from</span> numpy <span style="color: #00ffff;">import</span> sin, cos
+<span style="color: #00ffff;">print</span>(sin(2.0), cos(2.0))
+
+<span style="color: #00ffff;">from</span> numpy <span style="color: #00ffff;">import</span> *
+<span style="color: #00ffff;">print</span>(sin(2.0), cos(2.0))
 
 </code></pre>
 </div>
@@ -455,19 +424,52 @@ case, we can call a specific function within
 </aside>
 
 </section>
-<section id="slide-orgad0d16a">
-<h3 id="orgad0d16a">matplotlib / pylab</h3>
+<section id="slide-org625b7cd">
+<h3 id="org625b7cd">numpy</h3>
 <ul>
-<li><a href="https://matplotlib.org/tutorials/introductory/pyplot.html">Pyplot tutorial</a></li>
-<li>Basic introduction <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_plotting.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_plotting.ipynb">colab</a></li>
+<li>mathematical functions
+<ul>
+<li>trigonometric (e.g., <code>sin</code>, <code>cos</code>, and <code>arctan</code>)</li>
+<li>exponential and logarithmic (e.g., <code>exp</code> and <code>log</code>)</li>
+
+</ul></li>
+<li>constants (e.g., \(\pi\): <code>pi</code> and \(e\): <code>e</code>)</li>
+<li>ranges: <code>arange</code></li>
+<li>random number generators</li>
+<li>matrix and vector calculations</li>
 
 </ul>
 
+<aside class="notes">
+<p>
+
+</p>
+
+<p>
+Previously, we mentioned that Python can be used as a substitute for a
+calculator.  With what has been covered so far, this is not entirely
+true.  Modern calculators can evaluate special functions, such as
+logarithms, exponentials, trigonometric functions (e.g., sine, cosine,
+and tangent), as well as many others.  These functions are missing
+from Python.  For example, if you want to take the sine of a 
+</p>
+
+</aside>
+
+</section>
+<section id="slide-orgf8b100b">
+<h3 id="orgf8b100b">matplotlib / pylab</h3>
+<ul>
+<li>Basic introduction: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_plotting.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_plotting.ipynb">colab</a></li>
+<li><a href="https://matplotlib.org/tutorials/introductory/pyplot.html">Pyplot tutorial</a></li>
+<li><a href="https://matplotlib.org/3.1.1/gallery/index.html">Gallery page</a></li>
+
+</ul>
 
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy <span style="color: #00ffff;">as</span> np
-<span style="color: #00ffff;">import</span> pylab <span style="color: #00ffff;">as</span> plt
+<span style="color: #00ffff;">import</span> matplotlib.pylab <span style="color: #00ffff;">as</span> plt
 
 <span style="color: #eedd82;">x_data</span> = np.arange(0.0, 1.0, 0.01)
 <span style="color: #eedd82;">y_data</span> = [np.sin(x) <span style="color: #00ffff;">for</span> x <span style="color: #00ffff;">in</span> x_data]
@@ -495,8 +497,6 @@ In this notebook, we will be focusing mainly on creating scatter
 plots.
 </p>
 
-
-
 <ul>
 <li>plot</li>
 <li>show</li>
@@ -508,8 +508,8 @@ plots.
 </aside>
 
 </section>
-<section id="slide-orgbc42fa7">
-<h3 id="orgbc42fa7">scipy</h3>
+<section id="slide-org24668ab">
+<h3 id="org24668ab">Scipy</h3>
 <ul>
 <li>non-linear equation solver: <code>fsolve</code> (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_solver.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_solver.ipynb">colab</a>)</li>
 <li>numerical integration: <code>quad</code></li>
@@ -518,8 +518,8 @@ plots.
 </ul>
 
 </section>
-<section id="slide-org1255a1f">
-<h3 id="org1255a1f">Examples of using <code>fsolve</code></h3>
+<section id="slide-orgb0a2961">
+<h3 id="orgb0a2961">Examples of using <code>fsolve</code></h3>
 <ul>
 <li>CP101: Tutorial 17, Question 1 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1.ipynb">colab</a>)</li>
 <li>CP101: Tutorial 17, Question 1, alternate solution (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1-2.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1-2.ipynb">colab</a>)</li>
@@ -537,8 +537,8 @@ plots.
 
 
 </section>
-<section id="slide-orga873a25">
-<h3 id="orga873a25">Sympy</h3>
+<section id="slide-org684a1cb">
+<h3 id="org684a1cb">Sympy</h3>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -558,13 +558,13 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org6465fc6">
-<h2 id="org6465fc6">Further resources</h2>
-<div class="outline-text-2" id="text-org6465fc6">
+<section id="slide-orga07e0d2">
+<h2 id="orga07e0d2">Further resources</h2>
+<div class="outline-text-2" id="text-orga07e0d2">
 </div>
 </section>
-<section id="slide-org3541576">
-<h3 id="org3541576">Installation</h3>
+<section id="slide-org77b9a07">
+<h3 id="org77b9a07">Installation</h3>
 <p>
 If you are interested in installing 
 [[<a href="https://www.anaconda.com/products/individual">https://www.anaconda.com/products/individual</a>]
@@ -591,8 +591,8 @@ If you are interested in installing Python
 </section>
 </section>
 <section>
-<section id="slide-org514f790">
-<h2 id="org514f790">Summary</h2>
+<section id="slide-org44698c2">
+<h2 id="org44698c2">Summary</h2>
 <aside class="notes">
 nil
 </aside>
