--- a/slides/intro_notes-2020.html
+++ b/slides/intro_notes-2020.html
@@ -47,8 +47,8 @@
 
 
 <section>
-<section id="slide-orgaf699b7">
-<h2 id="orgaf699b7">Navigation instructions</h2>
+<section id="slide-org6055e73">
+<h2 id="org6055e73">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -73,8 +73,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-org6126069" data-audio-src="intro/title.ogg">
-<h2 id="org6126069">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orge95f03a" data-audio-src="intro/title.ogg">
+<h2 id="orge95f03a">CP213: Applied mathematics and problem solving</h2>
 <h2>Module overview</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -98,8 +98,8 @@ of the module aims and contents.
 </section>
 </section>
 <section>
-<section id="slide-org4b0c3d2" data-audio-src="intro/overview.ogg">
-<h2 id="org4b0c3d2">Overview</h2>
+<section id="slide-org42e6d05" data-audio-src="intro/overview.ogg">
+<h2 id="org42e6d05">Overview</h2>
 <ul>
 <li>Module leader: Leo Lue &amp; Abdul Sharif</li>
 <li>Demonstrators: Chris Boyle, Umair Jamal, and Tom Stavert</li>
@@ -178,8 +178,8 @@ course.
 </aside>
 
 </section>
-<section id="slide-org669130a" data-audio-src="intro/componentsofassessment.ogg">
-<h3 id="org669130a">Components of assessment</h3>
+<section id="slide-org61530cd" data-audio-src="intro/componentsofassessment.ogg">
+<h3 id="org61530cd">Components of assessment</h3>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -253,16 +253,14 @@ semester 2.
 </section>
 </section>
 <section>
-<section id="slide-orgb802fc6" data-audio-src="intro/keylearningobjectives.ogg">
-<h2 id="orgb802fc6">Key learning objectives</h2>
+<section id="slide-org0615088" data-audio-src="intro/keylearningobjectives.ogg">
+<h2 id="org0615088">Key learning objectives</h2>
 <ul>
 <li>Problem solving</li>
 <li>Mathematics</li>
 <li>Programming with Python</li>
 
 </ul>
-
-
 
 <aside class="notes">
 <p>
@@ -316,8 +314,8 @@ solved analytically.
 </aside>
 
 </section>
-<section id="slide-orge2c7348" data-audio-src="intro/prerequisites.ogg">
-<h3 id="orge2c7348">Prerequisites</h3>
+<section id="slide-org67b21c0" data-audio-src="intro/prerequisites.ogg">
+<h3 id="org67b21c0">Prerequisites</h3>
 <ul>
 <li>CP101: Basic Principles in Chemical Engineering</li>
 <li>CP102: Chemical Engineering: Fundamentals, Techniques and Tools</li>
@@ -370,8 +368,8 @@ that you are confident that you understand them thoroughly.
 </aside>
 
 </section>
-<section id="slide-org3fd9938" data-audio-src="intro/schedule.ogg">
-<h3 id="org3fd9938">Schedule</h3>
+<section id="slide-org98858fd" data-audio-src="intro/schedule.ogg">
+<h3 id="org98858fd">Schedule</h3>
 <ul>
 <li>Week 1: Python and its applications</li>
 <li>Weeks 2-4: Differential balances</li>
@@ -432,8 +430,8 @@ materials.
 </aside>
 
 </section>
-<section id="slide-orga725e6e" data-audio-src="intro/learningmaterials.ogg">
-<h3 id="orga725e6e">Learning resources</h3>
+<section id="slide-orgbbf9613" data-audio-src="intro/learningmaterials.ogg">
+<h3 id="orgbbf9613">Learning resources</h3>
 <ul>
 <li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace</a> 
 <ul>
@@ -464,9 +462,6 @@ All learning materials necessary for this module are accessible from
 the Myplace site, which can be reached from the link given here.  This
 includes lecture slides and recordings, Jupyter notebooks, tutorial
 sheets and solutions, links to Zoom sessions, etc.
-</p>
-
-<p>
 All on-line lectures, question and answer sessions, and tutorial
 session are accessible from this Zoom link, which is shown here.
 </p>
@@ -479,9 +474,10 @@ whole.
 </p>
 
 </aside>
+
 </section>
-<section id="slide-org2a9e570" data-audio-src="intro/additionalresources.ogg">
-<h3 id="org2a9e570">Additional resources</h3>
+<section id="slide-org5f45444" data-audio-src="intro/additionalresources.ogg">
+<h3 id="org5f45444">Additional resources</h3>
 <ul>
 <li>Books:
 <ul>
@@ -540,8 +536,8 @@ class forum on Myplace.
 </section>
 </section>
 <section>
-<section id="slide-org545ddba" data-audio-src="intro/questions.ogg">
-<h2 id="org545ddba">Questions?</h2>
+<section id="slide-orgd6c5e7c" data-audio-src="intro/questions.ogg">
+<h2 id="orgd6c5e7c">Questions?</h2>
 <p>
 If you have any questions, please post to the class forum on Myplace
 or email me at leo.lue@strath.ac.uk.
