--- a/slides/intro_notes-2020.html
+++ b/slides/intro_notes-2020.html
@@ -47,8 +47,8 @@
 
 
 <section>
-<section id="slide-org6055e73">
-<h2 id="org6055e73">Navigation instructions</h2>
+<section id="slide-org328627e">
+<h2 id="org328627e">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -73,8 +73,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-orge95f03a" data-audio-src="intro/title.ogg">
-<h2 id="orge95f03a">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgfd2b663" data-audio-src="intro/title.ogg">
+<h2 id="orgfd2b663">CP213: Applied mathematics and problem solving</h2>
 <h2>Module overview</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -98,8 +98,8 @@ of the module aims and contents.
 </section>
 </section>
 <section>
-<section id="slide-org42e6d05" data-audio-src="intro/overview.ogg">
-<h2 id="org42e6d05">Overview</h2>
+<section id="slide-org1b95ba3" data-audio-src="intro/overview.ogg">
+<h2 id="org1b95ba3">Overview</h2>
 <ul>
 <li>Module leader: Leo Lue &amp; Abdul Sharif</li>
 <li>Demonstrators: Chris Boyle, Umair Jamal, and Tom Stavert</li>
@@ -178,8 +178,10 @@ course.
 </aside>
 
 </section>
-<section id="slide-org61530cd" data-audio-src="intro/componentsofassessment.ogg">
-<h3 id="org61530cd">Components of assessment</h3>
+</section>
+<section>
+<section id="slide-org086a62b" data-audio-src="intro/componentsofassessment.ogg">
+<h2 id="org086a62b">Components of assessment</h2>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -253,8 +255,8 @@ semester 2.
 </section>
 </section>
 <section>
-<section id="slide-org0615088" data-audio-src="intro/keylearningobjectives.ogg">
-<h2 id="org0615088">Key learning objectives</h2>
+<section id="slide-org7d55f84" data-audio-src="intro/keylearningobjectives.ogg">
+<h2 id="org7d55f84">Key learning objectives</h2>
 <ul>
 <li>Problem solving</li>
 <li>Mathematics</li>
@@ -314,8 +316,10 @@ solved analytically.
 </aside>
 
 </section>
-<section id="slide-org67b21c0" data-audio-src="intro/prerequisites.ogg">
-<h3 id="org67b21c0">Prerequisites</h3>
+</section>
+<section>
+<section id="slide-org27be1b7" data-audio-src="intro/prerequisites.ogg">
+<h2 id="org27be1b7">Prerequisites</h2>
 <ul>
 <li>CP101: Basic Principles in Chemical Engineering</li>
 <li>CP102: Chemical Engineering: Fundamentals, Techniques and Tools</li>
@@ -367,9 +371,12 @@ that you are confident that you understand them thoroughly.
 
 </aside>
 
+
 </section>
-<section id="slide-org98858fd" data-audio-src="intro/schedule.ogg">
-<h3 id="org98858fd">Schedule</h3>
+</section>
+<section>
+<section id="slide-org53d4eae" data-audio-src="intro/schedule.ogg">
+<h2 id="org53d4eae">Schedule</h2>
 <ul>
 <li>Week 1: Python and its applications</li>
 <li>Weeks 2-4: Differential balances</li>
@@ -430,8 +437,10 @@ materials.
 </aside>
 
 </section>
-<section id="slide-orgbbf9613" data-audio-src="intro/learningmaterials.ogg">
-<h3 id="orgbbf9613">Learning resources</h3>
+</section>
+<section>
+<section id="slide-org3e66ae4" data-audio-src="intro/learningmaterials.ogg">
+<h2 id="org3e66ae4">Learning resources</h2>
 <ul>
 <li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace</a> 
 <ul>
@@ -476,8 +485,10 @@ whole.
 </aside>
 
 </section>
-<section id="slide-org5f45444" data-audio-src="intro/additionalresources.ogg">
-<h3 id="org5f45444">Additional resources</h3>
+</section>
+<section>
+<section id="slide-orge08c3af" data-audio-src="intro/additionalresources.ogg">
+<h2 id="orge08c3af">Additional resources</h2>
 <ul>
 <li>Books:
 <ul>
@@ -536,8 +547,8 @@ class forum on Myplace.
 </section>
 </section>
 <section>
-<section id="slide-orgd6c5e7c" data-audio-src="intro/questions.ogg">
-<h2 id="orgd6c5e7c">Questions?</h2>
+<section id="slide-org3a6b5f1" data-audio-src="intro/questions.ogg">
+<h2 id="org3a6b5f1">Questions?</h2>
 <p>
 If you have any questions, please post to the class forum on Myplace
 or email me at leo.lue@strath.ac.uk.
