--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orgc5a4dba">
-<h2 id="orgc5a4dba">Navigation instructions</h2>
+<section id="slide-org7f91df4">
+<h2 id="org7f91df4">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -75,8 +75,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-orgb45fee4" data-audio-src="python/title.ogg">
-<h2 id="orgb45fee4">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org56a9b05" data-audio-src="python/title.ogg">
+<h2 id="org56a9b05">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -101,12 +101,12 @@ simple chemical engineering problems.
 </section>
 </section>
 <section>
-<section id="slide-orgbf3611a" data-audio-src="python/">
-<h2 id="orgbf3611a">Overview</h2>
-<ul class="fragment data-audio-src hello">
+<section id="slide-orgc330409" data-audio-src="python/">
+<h2 id="orgc330409">Overview</h2>
+<ul>
 <li>Jupyter notebooks</li>
-<li>Basic elements of the language</li>
-<li>importing and using external libraries</li>
+<li>Basic elements of Python</li>
+<li>Importing and using external libraries</li>
 
 </ul>
 
@@ -184,12 +184,11 @@ to as far you want to go.
 
 </aside>
 
-
 </section>
 </section>
 <section>
-<section id="slide-orge11d27f">
-<h2 id="orge11d27f">Jupyter notebooks</h2>
+<section id="slide-org156a913">
+<h2 id="org156a913">Jupyter notebooks</h2>
 <ul>
 <li>Binder</li>
 <li>Google Colab</li>
@@ -225,8 +224,10 @@ mybinder.org, and the second method is with Google Colab.
 </aside>
 
 </section>
-<section id="slide-orgb43fb75">
-<h3 id="orgb43fb75">binder</h3>
+</section>
+<section>
+<section id="slide-orgaa55d9a">
+<h2 id="orgaa55d9a">binder</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29814&amp;code=d3~fUfZO0i6BIXbLrG8LPTO8TxihQo0" frameborder="0" allowfullscreen></iframe>
 
 
@@ -235,8 +236,10 @@ To follow along, open the Jupyter notebook: <a href="https://mybinder.org/v2/gh/
 </p>
 
 </section>
-<section id="slide-orge49d117">
-<h3 id="orge49d117">Google Colab</h3>
+</section>
+<section>
+<section id="slide-org8f13464">
+<h2 id="org8f13464">Google Colab</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29815&amp;code=dd~rQcuNtpfbWJpjOH07dDfsrn3beyJ" frameborder="0" allowfullscreen></iframe>
 
 
@@ -247,13 +250,14 @@ To follow along, open the Jupyter notebook: <a href="https://colab.research.goog
 </section>
 </section>
 <section>
-<section id="slide-orgf346b2f">
-<h2 id="orgf346b2f">Basics</h2>
-<div class="outline-text-2" id="text-orgf346b2f">
-</div>
+<section id="slide-orgffb8c7a">
+<h2 id="orgffb8c7a">Basics</h2>
+
 </section>
-<section id="slide-orgd0877e2">
-<h3 id="orgd0877e2">Python as a calculator</h3>
+</section>
+<section>
+<section id="slide-orga359c90">
+<h2 id="orga359c90">Python as a calculator</h2>
 <div>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29103&amp;code=cT~vMz6ypmaysddJKeMFJCSsrvT7UEV" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -268,8 +272,10 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-orgf12efb1">
-<h3 id="orgf12efb1">Example using variables</h3>
+</section>
+<section>
+<section id="slide-org40b8447">
+<h2 id="org40b8447">Example using variables</h2>
 <div>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -284,13 +290,17 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-org5ad0e25">
-<h3 id="org5ad0e25">Variables: Numbers and strings</h3>
+</section>
+<section>
+<section id="slide-orge9aa3cb">
+<h2 id="orge9aa3cb">Variables: Numbers and strings</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29216&amp;code=d5~ijLchTEOwGJMFWGf7RFQxZ9ZBPq8" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org5275e09">
-<h3 id="org5275e09">Variables: Lists</h3>
+</section>
+<section>
+<section id="slide-orgdf96afb">
+<h2 id="orgdf96afb">Variables: Lists</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29236&amp;code=cL~mfgCUbBNSZdDeCdWGhFAybiLyywg" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -298,15 +308,19 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-orgece617a">
-<h3 id="orgece617a">Variables: Dictionaries</h3>
+</section>
+<section>
+<section id="slide-org04bb5a2">
+<h2 id="org04bb5a2">Variables: Dictionaries</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29339&amp;code=de~TDs6xrAtA4CCHNgzdMWVeqbpLI9b" frameborder="0" allowfullscreen></iframe>
 
 
 
 </section>
-<section id="slide-orgd2fd8f4">
-<h3 id="orgd2fd8f4">Example using dictionaries</h3>
+</section>
+<section>
+<section id="slide-org19eba90">
+<h2 id="org19eba90">Example using dictionaries</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29221&amp;code=ct~RXSPpeK9MhrYbicpud7Bk9fTexcM" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -314,33 +328,17 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-org4402b94">
-<h3 id="org4402b94">More advanced use of dictionaries</h3>
+</section>
+<section>
+<section id="slide-orgeb95a01">
+<h2 id="orgeb95a01">More advanced use of dictionaries</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29219&amp;code=de~TDs6xoAsA0CIHNgAdMWXejboLO9b" frameborder="0" allowfullscreen></iframe>
-
-</section>
-<section id="slide-org0edb566">
-<h3 id="org0edb566">Functions</h3>
-
-
-<p>
-See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_functions.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_functions.ipynb">colab</a>.
-</p>
-
-</section>
-<section id="slide-orgd0aeda6">
-<h3 id="orgd0aeda6">Conditionals</h3>
-
-
-<p>
-See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_conditionals.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_conditionals.ipynb">colab</a>.
-</p>
 
 </section>
 </section>
 <section>
-<section id="slide-orgceb2f07">
-<h2 id="orgceb2f07">Importing libraries</h2>
+<section id="slide-org5a6675f">
+<h2 id="org5a6675f">Importing libraries</h2>
 <ul>
 <li>Matplotlib</li>
 <li>Numpy</li>
@@ -383,8 +381,10 @@ module, and that you will find extremely useful, include:
 </aside>
 
 </section>
-<section id="slide-orga98a53c">
-<h3 id="orga98a53c">importing numpy</h3>
+</section>
+<section>
+<section id="slide-orgfb82d36">
+<h2 id="orgfb82d36">importing numpy</h2>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
@@ -424,8 +424,10 @@ case, we can call a specific function within
 </aside>
 
 </section>
-<section id="slide-org625b7cd">
-<h3 id="org625b7cd">numpy</h3>
+</section>
+<section>
+<section id="slide-orgcb7c439">
+<h2 id="orgcb7c439">numpy</h2>
 <ul>
 <li>mathematical functions
 <ul>
@@ -457,8 +459,10 @@ from Python.  For example, if you want to take the sine of a
 </aside>
 
 </section>
-<section id="slide-orgf8b100b">
-<h3 id="orgf8b100b">matplotlib / pylab</h3>
+</section>
+<section>
+<section id="slide-org2931538">
+<h2 id="org2931538">matplotlib / pylab</h2>
 <ul>
 <li>Basic introduction: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_plotting.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_plotting.ipynb">colab</a></li>
 <li><a href="https://matplotlib.org/tutorials/introductory/pyplot.html">Pyplot tutorial</a></li>
@@ -508,8 +512,10 @@ plots.
 </aside>
 
 </section>
-<section id="slide-org24668ab">
-<h3 id="org24668ab">Scipy</h3>
+</section>
+<section>
+<section id="slide-org8f58556">
+<h2 id="org8f58556">Scipy</h2>
 <ul>
 <li>non-linear equation solver: <code>fsolve</code> (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_solver.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_solver.ipynb">colab</a>)</li>
 <li>numerical integration: <code>quad</code></li>
@@ -518,8 +524,10 @@ plots.
 </ul>
 
 </section>
-<section id="slide-orgb0a2961">
-<h3 id="orgb0a2961">Examples of using <code>fsolve</code></h3>
+</section>
+<section>
+<section id="slide-org91da8a1">
+<h2 id="org91da8a1">Examples of using <code>fsolve</code></h2>
 <ul>
 <li>CP101: Tutorial 17, Question 1 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1.ipynb">colab</a>)</li>
 <li>CP101: Tutorial 17, Question 1, alternate solution (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1-2.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1-2.ipynb">colab</a>)</li>
@@ -537,8 +545,10 @@ plots.
 
 
 </section>
-<section id="slide-org684a1cb">
-<h3 id="org684a1cb">Sympy</h3>
+</section>
+<section>
+<section id="slide-orge057c54">
+<h2 id="orge057c54">Sympy</h2>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -558,16 +568,11 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orga07e0d2">
-<h2 id="orga07e0d2">Further resources</h2>
-<div class="outline-text-2" id="text-orga07e0d2">
-</div>
-</section>
-<section id="slide-org77b9a07">
-<h3 id="org77b9a07">Installation</h3>
+<section id="slide-org483455c">
+<h2 id="org483455c">Installation</h2>
 <p>
-If you are interested in installing 
-[[<a href="https://www.anaconda.com/products/individual">https://www.anaconda.com/products/individual</a>]
+If you are interested in installing Python directly on your computer,
+see the link <a href="https://www.anaconda.com/products/individual">https://www.anaconda.com/products/individual</a>.
 </p>
 
 <aside class="notes">
@@ -591,8 +596,8 @@ If you are interested in installing Python
 </section>
 </section>
 <section>
-<section id="slide-org44698c2">
-<h2 id="org44698c2">Summary</h2>
+<section id="slide-orgd61b871">
+<h2 id="orgd61b871">Summary</h2>
 <aside class="notes">
 nil
 </aside>
