--- a/slides/links.html
+++ b/slides/links.html
@@ -14,22 +14,22 @@
 
   <li class="slide-menu-item menu-section">Weeks 2-4: Differential balances</li>
   <li class="slide-menu-item">
-    <a href="https://mjksill.github.io/CP213-online/slides/mass_notes.html">Mass and species balances</a>
+    <!---a href="https://mjksill.github.io/CP213-online/slides/mass_notes.html">Mass and species balances</a>
   </li>
   <li class="slide-menu-item">
     <a href="https://mjksill.github.io/CP213-online/slides/energy_notes.html">Energy balances</a>
   </li>
   <li class="slide-menu-item">
-    <a href="https://mjksill.github.io/CP213-online/slides/momentum_notes.html">Momentum/force balances</a>
+    <a href="https://mjksill.github.io/CP213-online/slides/momentum_notes.html">Momentum/force balances</a--->
   </li>
 
   <li class="slide-menu-item menu-section">Weeks 5-8: Ordinary differential equations</li>
   <li class="slide-menu-item">
-    <a href="https://mjksill.github.io/CP213-online/slides/ode_notes.html">Ordinary differential equations</a>
+    <!---a href="https://mjksill.github.io/CP213-online/slides/ode_notes.html">Ordinary differential equations</a--->
   </li>
   
   <li class="slide-menu-item menu-section">Weeks 9-10: Multivariate calculus</li>
   <li class="slide-menu-item">
-    <a href="https://mjksill.github.io/CP213-online/slides/multivariate_notes.html">Multivariate calculus</a>
+    <!---a href="https://mjksill.github.io/CP213-online/slides/multivariate_notes.html">Multivariate calculus</a--->
   </li>
 </ul>
